# ECM-16.1-twostage

./: DESIGN.md
ECM-ECM-16.1/: .gitlab-ci.yml  CMakeLists.txt  README.md
ECM-ECM-16.1/cfg/: encoder_intra_ecm.cfg  encoder_lowdelay_P_ecm.cfg  encoder_lowdelay_ecm.cfg  encoder_randomaccess_ecm.cfg  encoder_randomaccess_gop16_ecm.cfg
ECM-ECM-16.1/cfg/base/: encoder_intra_vtm.cfg  encoder_lowdelay_P_vtm.cfg  encoder_lowdelay_vtm.cfg  encoder_randomaccess_vtm.cfg  encoder_randomaccess_vtm_gop16.cfg
ECM-ECM-16.1/cfg/groupoff/: offgroup1-5.cfg  offgroup1.cfg  offgroup2.cfg  offgroup3.cfg  offgroup4.cfg  offgroup5.cfg
ECM-ECM-16.1/cfg/per-class/: classA.cfg  classA_randomaccess.cfg  classB_lowdelay.cfg  classB_randomaccess.cfg  classD_randomaccess.cfg  classF.cfg  classF_lowdelay.cfg
ECM-ECM-16.1/cfg/per-sequence-gaming/: ARPG.cfg  BaoleiMan.cfg  BaoleiYard.cfg  Darktree.cfg  DesertTown2.cfg  Dota2.cfg  GTAV.cfg  JianlingTemple.cfg  Level1.cfg  Minecraft.cfg  ProjectCARS.cfg  SunTemple1.cfg  Witcher3.cfg
ECM-ECM-16.1/cfg/rpr/: scale1.25x.cfg  scale1.33x.cfg  scale1.5x.cfg  scale2.0x.cfg
ECM-ECM-16.1/cfg/tool-on/: encoder_intra_vtm.cfg  encoder_lowdelay_P_vtm.cfg  encoder_randomaccess_vtm.cfg  encoder_randomaccess_vtm_gop16.cfg
ECM-ECM-16.1/doc/: software-manual.tex
ECM-ECM-16.1/script/: decodeAndEstimateRate.py  example.sh  selectParameters.py
ECM-ECM-16.1/source/App/BitstreamExtractorApp/: BitstreamExtractorApp.cpp  BitstreamExtractorApp.h  BitstreamExtractorAppCfg.cpp  BitstreamExtractorAppCfg.h  bitstreamextractormain.cpp
ECM-ECM-16.1/source/App/CabacTraining/: CMakeLists.txt  README.md  data.h  io.h  main.cpp  optimization.h  simulator.h
ECM-ECM-16.1/source/App/DecoderApp/: DecApp.cpp  DecApp.h  DecAppCfg.cpp  DecAppCfg.h  decmain.cpp
ECM-ECM-16.1/source/App/EncoderApp/: EncApp.cpp  EncApp.h  EncAppCfg.cpp  EncAppCfg.h  encmain.cpp
(+200 files in other folders)
